<resources>
    <string name="app_name">Quick Reply</string>
    <string name="rules">Rules</string>
    <string name="replies">Replies</string>
    <string name="settings">Settings</string>

    <string name="qr_started">QuickReply started</string>
    <string name="permission_denied">You must grant all permissions to use QuickReply</string>
    <string name="none_selected">&lt;None selected&gt;</string>

    <string name="add_reply">Add reply</string>
    <string name="add_rule">Add rule</string>

    <string name="default_reply_1">Call you later</string>
    <string name="default_reply_2">I\'m busy right now</string>
    <string name="default_reply_3">I will call you later</string>

    <string name="no_replies">No replies! \nTap + below to add a reply.</string>
    <string name="no_reply">No reply written</string>
    <string name="no_subdirectories">No folders or files here</string>
    <string name="no_rules">No rules! \nTap + below to add a rule.</string>
    
    <string name="reply_exported">Replies exported to:</string>
    <string name="reply_imported">Replies imported from:</string>
    <string name="file_not_valid">File not valid for import:</string>
    <string name="select_file">Select a file to import</string>
    <string name="select_folder">Select a folder to export</string>
    <string name="folder_name_empty">Folder name cannot be empty</string>

    <string name="auto_rules_disabled">Automatic rules disabled! \nSelect the above checkbox  to enable.</string>
    <string name="use_dont_disturb">Listen do not disturb mode</string>
    <string name="dnd_has_no_reply">Can\'t listen to DND if there\'re no replies</string>
    <string name="dnd_changed_reply">DND reply changed, because last one no longer exists</string>

    <string name="clock_seperator">&#160;to&#160;</string>
    <string name="and">and</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="up">[Up]</string>
    <string name="new_folder">New Folder</string>

    <string name="everyday">Everyday</string>
    <string name="weekdays">Weekdays</string>
    <string name="weekends">Weekends</string>

    <!-- settings -->
    <string name="settings_listen_dnd_key" translatable="false">tr.edu.iyte.quickreply.settings.LISTEN_DND</string>
    <string name="settings_reply_dnd_key" translatable="false">tr.edu.iyte.quickreply.settings.DND_REPLY</string>
    <string name="settings_reset_default_replies_key" translatable="false">tr.edu.iyte.quickreply.settings.RESET_REPLIES</string>
    <string name="settings_delete_rules_key" translatable="false">tr.edu.iyte.quickreply.settings.DELETE_RULES</string>
    <string name="settings_import_export_rules_key" translatable="false">tr.edu.iyte.quickreply.settings.IMPORT_EXPORT_RULES</string>
    <string name="settings_import_export_replies_key" translatable="false">tr.edu.iyte.quickreply.settings.IMPORT_EXPORT_REPLIES</string>
    <string name="settings_delete_all_replies_key" translatable="false">tr.edu.iyte.quickreply.settings.DELETE_ALL_RULES</string>
    <!--<string name="settings_reply_mode_key" translatable="false">tr.edu.iyte.quickreply.settings.REPLY_MODE</string>-->

    <string name="settings_category_dnd">Do not disturb</string>
    <string name="settings_category_rules">Rules</string>
    <string name="settings_listen_dnd">Listen Do not disturb mode</string>
    <string name="settings_reply_dnd">Select reply to send</string>
    <string name="settings_reset_default_replies">Reset to default replies</string>
    <string name="settings_delete_rules">Delete all rules</string>
    <string name="settings_import_export">Export/import</string>
    <string name="settings_category_general">General</string>
    <string name="settings_delete_all_replies">Delete all replies</string>
    <!--<string name="settings_reply_mode">Select reply mode</string>
    <string name="settings_reply_mode_default">Calls</string>-->

    <string name="settings_listen_dnd_summary">Automatically activates QuickReply when do not disturb is activated</string>
    <string name="settings_reset_default_replies_confirmation">Do you want to preserve custom replies?</string>
    <string name="settings_delete_replies_confirmation">All replies will be deleted</string>

</resources>
