<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_category_general">
        <Preference
            android:key="@string/settings_reset_default_replies_key"
            android:title="@string/settings_reset_default_replies" />
        <Preference
            android:key="@string/settings_delete_all_replies_key"
            android:title="@string/settings_delete_all_replies" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings_category_dnd">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/settings_listen_dnd_key"
            android:summary="@string/settings_listen_dnd_summary"
            android:title="@string/settings_listen_dnd" />
        <Preference
            android:dependency="@string/settings_listen_dnd_key"
            android:key="@string/settings_reply_dnd_key"
            android:title="@string/settings_reply_dnd" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings_category_rules">
        <Preference
            android:key="@string/settings_delete_rules_key"
            android:title="@string/settings_delete_rules" />
        <Preference
            android:key="@string/settings_import_export_rules_key"
            android:title="@string/settings_import_export_rules" />
    </PreferenceCategory>
</PreferenceScreen>